--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,9 +25,9 @@ build:
 release-tagged-image:
   stage: build
   script:
-    - docker build -t grandfleet/seng475-sde:4.0.13-new .
-    - docker tag grandfleet/seng475-sde:4.0.13-new -grandfleet/seng475-sde:4.0.13-new
-    - docker push grandfleet/seng475-sde:4.0.13-new
+    - docker build -t grandfleet/seng475-sde:t4.0.13 .
+    - docker tag grandfleet/seng475-sde:t4.0.13 -grandfleet/seng475-sde:t4.0.13
+    - docker push grandfleet/seng475-sde:t4.0.13
   only:
     - master
   when: manual
@@ -37,9 +37,9 @@ release-tagged-image:
 release-tagged-image:
   stage: build
   script:
-    - docker build -t grandfleet/seng475-sde:test-halfC .
-    - docker tag grandfleet/seng475-sde:test-halfC -grandfleet/seng475-sde:test-halfC
-    - docker push grandfleet/seng475-sde:test-halfC
+    - docker build -t grandfleet/seng475-sde:V0.0.1 .
+    - docker tag grandfleet/seng475-sde:V0.0.1 -grandfleet/seng475-sde:
+    - docker push grandfleet/seng475-sde:V0.0.1
   only:
     - master
   when: manual
