--- a/DockerfileTexLiveInstall
+++ b/DockerfileTexLiveInstall
@@ -1,5 +1,5 @@
-FROM grandfleet/seng475-sde:4.0.13
-RUN apt-get update && apt-get install python-dev -y
+FROM grandfleet/seng475-sde:t02212019
+# RUN apt-get update && apt-get install python-dev -y
 WORKDIR /sde
 # Copy the installation files over
 COPY / .
