--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ release-tagged-image:
 release-tagged-image-tl:
   stage: build
   script:
-    - docker build -t grandfleet/seng475-sde:tTL02212019 -f DockerfileTexLiveInstall .
+    - docker build -t grandfleet/seng475-sde:tTL02212019 .
     - docker tag grandfleet/seng475-sde:tTL02212019 grandfleet/seng475-sde:tTL02212019
     - docker push grandfleet/seng475-sde:tTL02212019
   only:
@@ -50,9 +50,9 @@ release-tagged-image-tl:
 gitlab-runner-test:
   stage: build
   script:
-    - docker build -t grandfleet/seng475-sde:V0.0.1 .
-    - docker tag grandfleet/seng475-sde:V0.0.1 grandfleet/seng475-sde:V0.0.1
-    - docker push grandfleet/seng475-sde:V0.0.1
+    - docker build -t grandfleet/seng475-sde:V0.0.15 .
+    - docker tag grandfleet/seng475-sde:V0.0.15 grandfleet/seng475-sde:V0.0.15
+    - docker push grandfleet/seng475-sde:V0.0.15
   only:
     - master
   when: manual
