--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,10 +65,11 @@ gitlab-runner-test-tl:
   stage: build
   script:
     - docker build -t grandfleet/seng475-sde:V0.0.3 -f DockerfileTexLiveInstall .
-    - docker tag grandfleet/seng475-sde:V0.0.3 grandfleet/seng475-sde:V0.0.2
+    - docker tag grandfleet/seng475-sde:V0.0.3 grandfleet/seng475-sde:V0.0.3
     - docker push grandfleet/seng475-sde:V0.0.3
   only:
     - master
+  when: manual
     
 test-install:
   stage: test
