updating gitlab yaml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,9 @@ build:
 release-tagged-image:
   stage: build
   script:
-    - docker build -t grandfleet/seng475-sde:t02212019 .
-    - docker tag grandfleet/seng475-sde:t02212019 grandfleet/seng475-sde:t02212019
-    - docker push grandfleet/seng475-sde:t02212019
+    - docker build -t grandfleet/seng475-sde:HLBF2019 .
+    - docker tag grandfleet/seng475-sde:HLBF2019 grandfleet/seng475-sde:HLBF2019
+    - docker push grandfleet/seng475-sde:HLBF2019
   only:
     - master
   when: manual
