updating gitlab.ci

--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -6,6 +6,11 @@ COPY / .
 
 RUN python3 --version && python --version
 
+RUN  ./checkFolder.sh /usr/local/bin/cmake &&  ./checkFolder.sh /usr/local/sde/bin/cmake
+RUN cd /usr/local/sde && ls 
+RUN cd /usr/local/sde/bin && echo "export PATH=\$PATH:$(pwd)" >> ~/.bashrc
+RUN source ~/.bashrc 
+
 RUN cmake --version && gcc --version
 
 RUN clang --version
