--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -6,14 +6,14 @@ COPY / .
 
 RUN python3 --version && python --version
 
-RUN cd /usr/local/sde/bin && ls 
+# RUN cd /usr/local/sde/bin && ls 
 RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
 RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
 
-RUN cmake --version && gcc --version
+RUN cmake --version || true && gcc --version
 
-RUN clang --version && cd ../
+RUN clang --version 
 
 # Make new directory for installation
 RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f
