--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -1,5 +1,7 @@
 FROM grandfleet/seng475-sde:HLBF2019
 
+ENV PATH "$PATH:/usr/local/sde/bin"
+
 WORKDIR /boost-install
 
 COPY / .
@@ -7,10 +9,10 @@ COPY / .
 RUN python3 --version && python --version
 
 # RUN cd /usr/local/sde/bin && ls 
-RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
-RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
+# RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
+# RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
-
+RUN echo $PATH
 RUN cmake --version || true && gcc --version
 
 RUN clang --version 
