--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -1,6 +1,6 @@
 FROM grandfleet/seng475-sde:HLBF2019
 
-ENV PATH "$PATH:/usr/local/sde/bin"
+# ENV PATH "$PATH:/usr/local/sde/bin"
 ENV SDE_CLANG_CXX_PROGRAM "/usr/local/sde/bin/clang"
 ENV SDE_CMAKE_PROGRAM "/usr/local/sde/bin/cmake"
 
@@ -11,8 +11,8 @@ COPY / .
 RUN python3 --version && python --version
 
 # RUN cd /usr/local/sde/bin && ls 
-# RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
-# RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
+RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
+RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
 RUN echo $PATH
 RUN cmake --version || true && gcc --version
