--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -7,15 +7,14 @@ ENV SDE_CMAKE_PROGRAM "/usr/local/sde/bin/cmake"
 WORKDIR /boost-install
 
 COPY / .
-
+RUN cmake --version || true
 RUN python3 --version && python --version
-
-# RUN cd /usr/local/sde/bin && ls 
-RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
+# RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
 RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
 RUN echo $PATH
-RUN cmake --version || true && gcc --version
+RUN cmake --version || true 
+RUN gcc --version
 
 RUN clang --version 
 
