--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -1,22 +1,21 @@
 FROM grandfleet/seng475-sde:HLBF2019
 
 # ENV PATH "$PATH:/usr/local/sde/bin"
-ENV SDE_CLANG_CXX_PROGRAM "/usr/local/sde/bin/clang"
+ENV SDE_CLANG_C_PROGRAM "/usr/local/sde/bin/clang"
 ENV SDE_CMAKE_PROGRAM "/usr/local/sde/bin/cmake"
 
 WORKDIR /boost-install
 
 COPY / .
-RUN cmake --version || true
 RUN python3 --version && python --version
-# RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
+RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
 RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
 RUN echo $PATH
 RUN cmake --version || true 
 RUN gcc --version
 
-RUN clang --version 
+RUN clang --version
 
 # Make new directory for installation
 RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f
