--- a/DockerfileBoost
+++ b/DockerfileBoost
@@ -1,21 +1,17 @@
 FROM grandfleet/seng475-sde:HLBF2019
 
-# ENV PATH "$PATH:/usr/local/sde/bin"
-ENV SDE_CLANG_C_PROGRAM "/usr/local/sde/bin/clang"
-ENV SDE_CMAKE_PROGRAM "/usr/local/sde/bin/cmake"
+ENV INSTALL_DIR "/usr/local/sde"
 
 WORKDIR /boost-install
-
 COPY / .
 RUN python3 --version && python --version
-RUN ln -s /usr/local/sde/bin/cmake /usr/local/bin/cmake
-RUN ln -s /usr/local/sde/bin/clang /usr/local/bin/clang
 
 RUN echo $PATH
-RUN cmake --version || true 
+
+# Make new directory for installation
+RUN chmod +x installerRest && ./installerRest -d INSTALL_DIR -e default -f
+
+RUN cmake --version 
 RUN gcc --version
 
 RUN clang --version
-
-# Make new directory for installation
-RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f
