--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,18 @@ full-build:
     - seng475
   when: manual 
 
+full-build-nighttime:
+  stage: build
+  script:
+    - docker build -t grandfleet/seng475-sde:fullsde .
+    - docker tag grandfleet/seng475-sde:fullsde grandfleet/seng475-sde:fullsde
+    - docker push grandfleet/seng475-sde:fullsde
+  only:
+    - master
+  tags:
+    - seng475
+  when: schedules
+  
 full-build-centos-epic:
   stage: build
   script:
