--- a/s/Dockerfile2
+++ b/s/Dockerfile2
@@ -1,9 +1,5 @@
 FROM registry.gitlab.com/seng475-sde/seng475-docker/seng475:sdeBase
 
-
-# Activate the environment 
-
-
 # Navigate to existing install directory
 RUN cd /usr/local/sde/bin
 # Give permissions
@@ -12,15 +8,11 @@ RUN chmod +x sde_make_setup && chmod +x ../etc/environments/base
 RUN  - ./sde_make_setup -n base -s bash
 # Back to root 
 RUN cd ~
+
 WORKDIR /sde
 # Copy the installation files over
 COPY / .
 RUN ls
 
-
-- 
-    - 
-    - 
-
-# Make new directory for installation
+# Use existing directory for install 
 RUN chmod +x installer && installer -d /usr/local/sde -e default -f || true
