fixing step 2 and step 3

--- a/s/Dockerfile2
+++ b/s/Dockerfile2
@@ -15,4 +15,4 @@ COPY / .
 RUN ls
 
 # Use existing directory for install 
-RUN chmod +x installer && installer -d /usr/local/sde -e default -f || true
+RUN chmod +x installer && ./installer -d /usr/local/sde -e default -f || true
